# Rust-Practical-Projects

cli-tools/markdown-to-html_convertor/: Cargo.toml  README.md  index.html  test.md
cli-tools/markdown-to-html_convertor/src/: lib.rs  main.rs
cli-tools/todo_manager/: .gitignore  Cargo.toml  README.md
cli-tools/todo_manager/src/: cli.rs  main.rs  storage.rs  task.rs
cli-tools/weather_cli/: .gitignore  Cargo.toml  LICENSE.md  README.md
cli-tools/weather_cli/src/: main.rs
web-networking/crud_app_rest_api/: .gitignore  Cargo.toml  LICENSE.md  README.md
web-networking/crud_app_rest_api/src/: handlers.rs  main.rs  models.rs
web-networking/url_shortener/: Cargo.toml  README.md  sqlite.db
web-networking/url_shortener/src/: handlers.rs  main.rs  models.rs
